removed footer element, used a div and justify content, align items center to move footer in correct spot

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -36,11 +36,9 @@ a {
   background: #eee;
   color: darkmagenta;
   width: 100%;
-}
-
-footer {
   display: flex;
-  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
